--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" height="500" alt="">
+                    <img src="images/slider-img.png" height="450" alt="">
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/cloudslider3.jpg" alt="">
+                    <img src="images/cloudslider3.jpg" height="450" alt="">
                   </div>
                 </div>
               </div>
@@ -274,7 +274,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Currency Wallet
+                  Shared Hosting
                 </h5>
                 <p>
                   fact that a reader will be distracted by the readable content of a page when looking at its layout.
@@ -294,7 +294,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Security Storage
+                  Domain Registration
                 </h5>
                 <p>
                   fact that a reader will be distracted by the readable content of a page when looking at its layout.
@@ -314,7 +314,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Expert Support
+                  VP
                 </h5>
                 <p>
                   fact that a reader will be distracted by the readable content of a page when looking at its layout.
@@ -643,7 +643,7 @@
           What says our <span>Customers</span>
         </h2>
       </div>
-      <div class="carousel-wrap ">
+      <!-- <div class="carousel-wrap ">
         <div class="owl-carousel client_owl-carousel">
           <div class="item">
             <div class="box">
@@ -738,7 +738,80 @@
             </div>
           </div>
         </div>
+      </div> -->
+
+      <!-- Testimonial Start -->
+      <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container px-lg-5">
+          <div class="owl-carousel testimonial-carousel">
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 5px solid #0080FF">
+              <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
+                style="width: 45px; height: 45px; margin-top: -3px;">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
+                labore diam</p>
+              <div class="d-flex align-items-center">
+                <img class="img-fluid flex-shrink-0 rounded-circle" src="images/testimonial-1.jpg"
+                  style="width: 50px; height: 50px;">
+                <div class="pl-3">
+                  <h6 class="font-weight-bold mb-1">Client Name</h6>
+                  <small>Profession</small>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 5px solid #0080FF">
+              <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
+                style="width: 45px; height: 45px; margin-top: -3px;">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
+                labore diam</p>
+              <div class="d-flex align-items-center">
+                <img class="img-fluid flex-shrink-0 rounded-circle" src="images/testimonial-2.jpg"
+                  style="width: 50px; height: 50px;">
+                <div class="pl-3">
+                  <h6 class="font-weight-bold mb-1">Client Name</h6>
+                  <small>Profession</small>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 5px solid #0080FF">
+              <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
+                style="width: 45px; height: 45px; margin-top: -3px;">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
+                labore diam</p>
+              <div class="d-flex align-items-center">
+                <img class="img-fluid flex-shrink-0 rounded-circle" src="images/testimonial-3.jpg"
+                  style="width: 50px; height: 50px;">
+                <div class="pl-3">
+                  <h6 class="font-weight-bold mb-1">Client Name</h6>
+                  <small>Profession</small>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 5px solid #0080FF">
+              <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
+                style="width: 45px; height: 45px; margin-top: -3px;">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
+                labore diam</p>
+              <div class="d-flex align-items-center">
+                <img class="img-fluid flex-shrink-0 rounded-circle" src="images/testimonial-4.jpg"
+                  style="width: 50px; height: 50px;">
+                <div class="pl-3">
+                  <h6 class="font-weight-bold mb-1">Client Name</h6>
+                  <small>Profession</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- Testimonial End -->
     </div>
   </section>
 
