--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
   <!-- end why section -->
 
   <!-- team section -->
-  <section class="team_section layout_padding">
+  <!-- <section class="team_section layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2 class="">
@@ -631,9 +631,78 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end team section -->
-
+  <!-- Team Start -->
+  <div class="container-xxl py-5">
+    <div class="container px-lg-5">
+      <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s"
+        style="max-width: 600px;">
+        <h1 class="mb-3 font-weight-bold">Our Team Members</h1>
+        <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
+          ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
+      </div>
+      <div class="row g-4">
+        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+            <div class="text-center p-4">
+              <img class="img-fluid rounded-circle mb-4" src="images/team-1.jpg" alt="">
+              <h5 class="font-weight-bold mb-1">Full Name</h5>
+              <small>Designation</small>
+            </div>
+            <div class="d-flex justify-content-center bg-primary p-3">
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+            <div class="text-center p-4">
+              <img class="img-fluid rounded-circle mb-4" src="images/team-2.jpg" alt="">
+              <h5 class="font-weight-bold mb-1">Full Name</h5>
+              <small>Designation</small>
+            </div>
+            <div class="d-flex justify-content-center bg-primary p-3">
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+            <div class="text-center p-4">
+              <img class="img-fluid rounded-circle mb-4" src="images/team-3.jpg" alt="">
+              <h5 class="font-weight-bold mb-1">Full Name</h5>
+              <small>Designation</small>
+            </div>
+            <div class="d-flex justify-content-center bg-primary p-3">
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+            <div class="text-center p-4">
+              <img class="img-fluid rounded-circle mb-4" src="images/team-4.jpg" alt="">
+              <h5 class="font-weight-bold mb-1">Full Name</h5>
+              <small>Designation</small>
+            </div>
+            <div class="d-flex justify-content-center bg-primary p-3">
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-facebook-f"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fa fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Team End -->
 
   <!-- client section -->
   <section class="client_section layout_padding">
