--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
       </div>
       <div class="row g-4">
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-1.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -658,7 +658,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-2.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -672,7 +672,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-3.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -686,7 +686,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-          <div class="team-item border-top border-5 border-primary rounded shadow overflow-hidden">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-4.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -988,8 +988,8 @@
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; 2024 <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://hostflu.net">hostflu.net</a>
       </p>
     </div>
   </section>
