footer bg change and pricing card

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
   </section>
-  <div class="hero_area position-static">
+  <div class="hero_area">
     <div class="hero_bg_box">
       <div class="bg_img_box">
         <img src="images/hero-bg.png" alt="">
@@ -207,7 +207,7 @@
 
   <!-- Domain Search Start -->
   <div class="container-xxl domain mb-5" style="margin-top: 90px;">
-    <div class="container px-lg-5">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-10">
           <div class="section-title position-relative text-center mx-auto mb-4 pb-4 wow fadeInUp" data-wow-delay="0.1s"
@@ -224,27 +224,27 @@
           </div>
           <div class="row g-3 wow fadeInUp" data-wow-delay="0.5s">
             <div class="col-lg-2 col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.com</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.com</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
             <div class="col-lg-2 col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.net</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.net</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
             <div class="col-lg-2 col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.org</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.org</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
             <div class="col-lg-2 d-none d-md-block col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.us</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.us</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
             <div class="col-lg-2 d-none d-md-block col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.eu</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.eu</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
             <div class="col-lg-2 d-none d-md-block col-md-3 col-4 text-center">
-              <h5 class="fw-bold text-primary mb-1">.co.uk</h5>
+              <h5 class="font-weight-bold text-primary mb-1">.co.uk</h5>
               <p class="mb-0">$9.99/year</p>
             </div>
           </div>
@@ -338,6 +338,227 @@
   </section>
 
   <!-- end service section -->
+
+  <!-- Pricing Start -->
+  <section class="py-5">
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="section-title position-relative text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
+          style="max-width: 600px;">
+          <h1 class="mb-3">Our Hosting Plans</h1>
+          <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos ipsum clita
+            duo
+            sed. Sed vero sea diam erat vero elitr sit clita.</p>
+        </div>
+
+        <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+          <li class="nav-item mr-3" role="presentation">
+            <button class="nav-link active border-primary" id="pills-home-tab" data-toggle="pill"
+              data-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Shared
+              Hosting</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link border-primary" id="pills-profile-tab" data-toggle="pill"
+              data-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
+              aria-selected="false">VPS</button>
+          </li>
+        </ul>
+        <div class="tab-content mt-5" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <!-- price list 1 -->
+            <div class="row gy-5">
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-share-alt text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">Share Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>2.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-primary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-server text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">VPS Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>5.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-secondary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-cog text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">Dedi Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>11.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-primary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <!-- price list2 -->
+            <div class="row gy-5">
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-share-alt text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">VPS Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>2.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-primary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-server text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">VPS Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>5.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-secondary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                  <div
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
+                    style="width: 45px; height: 45px; margin-top: -3px;">
+                    <i class="fa fa-cog text-white"></i>
+                  </div>
+                  <div class="text-center border-bottom p-4 pt-5">
+                    <h4 class="font-weight-bold">Dedi Hosting</h4>
+                    <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
+                  </div>
+                  <div class="text-center border-bottom p-4">
+                    <p class="text-primary mb-1">Latest Offer - <strong>Save 30%</strong></p>
+                    <h1 class="mb-3">
+                      <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>11.49<small
+                        class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
+                    </h1>
+                    <a class="btn btn-primary px-4 py-2" href="">Buy Now</a>
+                  </div>
+                  <div class="p-4">
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>100 GB Disk Space</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Unlimited Bandwith</p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Upgrade to Positive SSL
+                    </p>
+                    <p class="border-bottom pb-3"><i class="fa fa-check text-primary mr-3"></i>Automatic Malware Removal
+                    </p>
+                    <p class="mb-0"><i class="fa fa-check text-primary mr-3"></i>30 Days Money Back Guarantee</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Pricing End -->
 
   <!-- about section -->
   <section class="about_section layout_padding">
@@ -635,7 +856,7 @@
   <!-- end team section -->
   <!-- Team Start -->
   <div class="container-xxl py-5">
-    <div class="container px-lg-5">
+    <div class="container">
       <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s"
         style="max-width: 600px;">
         <h1 class="mb-3 font-weight-bold">Our Team Members</h1>
@@ -811,7 +1032,7 @@
 
       <!-- Testimonial Start -->
       <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container px-lg-5">
+        <div class="container">
           <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 5px solid #0080FF">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
