--- a/pricing.html
+++ b/pricing.html
@@ -36,55 +36,77 @@
 </head>
 
 <body class="sub_page">
-
+  <section class="header-top">
+    <div class="container">
+      <div class="d-flex gap-2">
+        <div>
+          <a href="" class="text-white nav-link py-1 mr-3">
+            <span>
+              Call : +01 123455678990
+            </span>
+          </a>
+        </div>
+        <div>
+          <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
+            <span>
+              Email : support@hostflu.net
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
   <div class="hero_area">
-
-    <div class="hero_bg_box">
+    <!-- <div class="hero_bg_box">
       <div class="bg_img_box">
         <img src="images/hero-bg.png" alt="">
       </div>
-    </div>
-
+    </div> -->
     <!-- header section strats -->
     <header class="header_section">
-      <div class="container-fluid">
+      <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <span>
-              Finexo
-            </span>
+          <a class="navbar-brand" href="hostflu.net">
+            <img src="./images/logo-resize.png" alt="hostflu.net">
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
+            <span class=""></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="service.html">Services</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="pricing.html">Pricing <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="pricing.html">Pricing</a>
+              </li>
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <div class="quote_btn-container d-flex">
+                  <a href="" class="text-white nav-link border">
+                    Control
+                    <span>
+                      <i class="fa fa-sign-in" aria-hidden="true"></i>
+                    </span>
+                  </a>
+                </div>
               </li>
-              <form class="form-inline">
+              <!-- <form class="form-inline">
                 <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
-              </form>
+              </form> -->
             </ul>
           </div>
         </nav>
@@ -92,7 +114,6 @@
     </header>
     <!-- end header section -->
   </div>
-
 
 
   <!-- info section -->
