--- a/pricing.html
+++ b/pricing.html
@@ -214,16 +214,77 @@
 
   <!-- end info section -->
 
-  <!-- footer section -->
-  <section class="footer_section">
+  <!-- Footer Starts Here -->
+  <footer class="pt-5">
     <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
+      <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>About Us</h2>
+            </div>
+            <p>Host Cloud is provided by TemplateMo for free of charge. Anyone can download and use this CSS Bootstrap
+              template for commercial purposes.</p>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>Hosting Plans</h2>
+            </div>
+            <ul class="footer-list">
+              <li><a href="#">Basic Cloud 5X</a></li>
+              <li><a href="#">Cloud VPS 10X</a></li>
+              <li><a href="#">Advanced Cloud</a></li>
+              <li><a href="#">Custom Designs</a></li>
+              <li><a href="#">Special Solutions</a></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>Useful Links</h2>
+            </div>
+            <ul class="footer-list">
+              <li><a href="hostflu.net">Home</a></li>
+              <li><a href="service.html">Services</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Term & Conditions</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>More Information</h2>
+            </div>
+            <ul class="footer-list">
+              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
+              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-12 border-top mt-5">
+          <div class="sub-footer text-center py-5">
+            <p>
+              &copy; 2024 <span id="displayYear"></span> All Rights Reserved By
+              <a href="https://hostflu.net">hostflu.net</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-  </section>
-  <!-- footer section -->
+  </footer>
+  <!-- <section class="footer_section"> -->
 
   <!-- jQery -->
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
