footer design fixed for other page

--- a/team.html
+++ b/team.html
@@ -238,114 +238,77 @@
   </section>
   <!-- end team section -->
 
-  <!-- info section -->
-
-  <section class="info_section layout_padding2">
+  <!-- Footer Starts Here -->
+  <footer class="pt-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-3 info_col">
-          <div class="info_contact">
-            <h4>
-              Address
-            </h4>
-            <div class="contact_link_box">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>
-                  demo@gmail.com
-                </span>
-              </a>
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>About Us</h2>
             </div>
-          </div>
-          <div class="info_social">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
+            <p>Host Cloud is provided by TemplateMo for free of charge. Anyone can download and use this CSS Bootstrap
+              template for commercial purposes.</p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info_col">
-          <div class="info_detail">
-            <h4>
-              Info
-            </h4>
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>Hosting Plans</h2>
+            </div>
+            <ul class="footer-list">
+              <li><a href="#">Basic Cloud 5X</a></li>
+              <li><a href="#">Cloud VPS 10X</a></li>
+              <li><a href="#">Advanced Cloud</a></li>
+              <li><a href="#">Custom Designs</a></li>
+              <li><a href="#">Special Solutions</a></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>Useful Links</h2>
+            </div>
+            <ul class="footer-list">
+              <li><a href="hostflu.net">Home</a></li>
+              <li><a href="service.html">Services</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Term & Conditions</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6 col-xs-12">
+          <div class="footer-item">
+            <div class="footer-heading">
+              <h2>More Information</h2>
+            </div>
+            <ul class="footer-list">
+              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
+              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-12 border-top mt-5">
+          <div class="sub-footer text-center py-5">
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
-              words, combined with a handful
+              &copy; 2024 <span id="displayYear"></span> All Rights Reserved By
+              <a href="https://hostflu.net">hostflu.net</a>
             </p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-2 mx-auto info_col">
-          <div class="info_link_box">
-            <h4>
-              Links
-            </h4>
-            <div class="info_links">
-              <a class="active" href="index.html">
-                Home
-              </a>
-              <a class="" href="about.html">
-                About
-              </a>
-              <a class="" href="service.html">
-                Services
-              </a>
-              <a class="" href="pricing.html">
-                Pricing
-              </a>
-              <a class="" href="team.html">
-                Team
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col ">
-          <h4>
-            Subscribe
-          </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
-        </div>
       </div>
     </div>
-  </section>
-
-  <!-- end info section -->
-
-  <!-- footer section -->
-  <section class="footer_section">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </section>
-  <!-- footer section -->
+  </footer>
+  <!-- <section class="footer_section">-->
 
   <!-- jQery -->
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
