--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
 
   <!-- info section -->
 
-  <section class="info_section layout_padding2">
+  <!-- <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 info_col">
@@ -359,7 +359,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end info section -->
 
 
@@ -433,7 +433,7 @@
       </div>
     </div>
   </footer>
-  <!-- <section class="footer_section">
+  <!-- <section class="footer_section">-->
 
   <!-- jQery -->
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
