--- a/about.html
+++ b/about.html
@@ -158,9 +158,71 @@
 
   <!-- end about section -->
 
+  <!-- payment method start -->
+  <section class="py-5">
+    <div class="container">
+      <div class="heading_container heading_center mb-5">
+        <h2>
+          Payment Gateway
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="shadow border p-1 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="shadow border p-1 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="shadow border p-1 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="shadow border p-1 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="col-12 col-md-4 col-lg-3">Hi</div>
+        <div class="col-12 col-md-4 col-lg-3">Hi</div>
+        <div class="col-12 col-md-4 col-lg-3">Hi</div>
+        <div class="col-12 col-md-4 col-lg-3">Hi</div> -->
+      </div>
+    </div>
+  </section>
+
+  <!-- payment method end -->
   <!-- why section -->
 
-  <section class="why_section layout_padding">
+  <!-- <section class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -262,7 +324,7 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- end why section -->
 
   <!-- info section -->
