city bank payment add

--- a/about.html
+++ b/about.html
@@ -167,8 +167,8 @@
         </h2>
       </div>
       <div class="row">
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="shadow border p-1 p-md-3 rounded-lg">
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
               <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
               <div class="mt-4">
@@ -178,8 +178,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="shadow border p-1 p-md-3 rounded-lg">
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
               <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
               <div class="mt-4">
@@ -189,8 +189,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="shadow border p-1 p-md-3 rounded-lg">
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
               <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
               <div class="mt-4">
@@ -200,8 +200,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="shadow border p-1 p-md-3 rounded-lg">
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
               <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
               <div class="mt-4">
@@ -211,10 +211,10 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-12 col-md-4 col-lg-3">Hi</div>
-        <div class="col-12 col-md-4 col-lg-3">Hi</div>
-        <div class="col-12 col-md-4 col-lg-3">Hi</div>
-        <div class="col-12 col-md-4 col-lg-3">Hi</div> -->
+        <!-- <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
+        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
+        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
+        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div> -->
       </div>
     </div>
   </section>
@@ -408,7 +408,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info_col ">
+        <div class="col-md-6 col-lg-3 info_">
           <h4>
             Subscribe
           </h4>
