--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
   <!-- end about section -->
 
   <!-- payment method start -->
-  <section class="py-5">
+  <section class="py-5 payment-getway">
     <div class="container">
       <div class="heading_container heading_center mb-5">
         <h2>
@@ -170,7 +170,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <img src="/images/city.png" alt="city" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -181,7 +181,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <img src="/images/dutch.png" alt="dbbl" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -192,7 +192,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <img src="/images/brac.png" alt="brac" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -203,7 +203,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/city.png" alt="city" class="w-50 d-block m-auto">
+              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -211,10 +211,50 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
-        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
-        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div>
-        <div class="col-sm-6 col-md-4 col-lg-3">Hi</div> -->
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+          <div class="shadow border p-2 p-md-3 rounded-lg">
+            <div class="">
+              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <div class="mt-4">
+                <h4 class="font-weight-bold">The City Bank</h4>
+                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
