--- a/pricing.html
+++ b/pricing.html
@@ -95,7 +95,7 @@
               <li class="nav-item">
                 <div class="quote_btn-container d-flex">
                   <a href="" class="text-white nav-link border">
-                    Control
+                    Login
                     <span>
                       <i class="fa fa-sign-in" aria-hidden="true"></i>
                     </span>
@@ -114,7 +114,6 @@
     </header>
     <!-- end header section -->
   </div>
-
 
   <!-- Pricing Start -->
   <section class="py-5">
