--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
               <li class="nav-item">
                 <div class="quote_btn-container d-flex">
                   <a href="" class="text-white nav-link border">
-                    Control
+                    Login
                     <span>
                       <i class="fa fa-sign-in" aria-hidden="true"></i>
                     </span>
