--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </ul>
             <div class="quote_btn-container d-flex">
               <a href="" class="text-white nav-link border">
-                Control
+                Login
                 <span>
                   <i class="fa fa-sign-in" aria-hidden="true"></i>
                 </span>
