--- a/about.html
+++ b/about.html
@@ -119,12 +119,12 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          About <span>Us</span>
+          About Us<span></span>
         </h2>
-        <p>
+        <!-- <p>
           Magni quod blanditiis non minus sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum
           voluptatibus
-        </p>
+        </p> -->
       </div>
       <div class="row">
         <div class="col-md-6 ">
@@ -135,21 +135,50 @@
         <div class="col-md-6">
           <div class="detail-box">
             <h3>
-              We Are Finexo
+              Who we are
             </h3>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              Our company's journey started in 2018 at the hands of Mr. Ashiqur Rahman, originally called Titanhost.
+              Later, in 2023, we changed the name to HostFlu. We operate from Mymensingh, and many clients in and
+              outside the country are satisfied with our services. Our skilled staff are always committed to ensuring
+              our clients' highest level of service with their utmost knowledge, skills, and experience.
             </p>
             <p>
-              Molestiae odio earum non qui cumque provident voluptates, repellendus exercitationem, possimus at iste
-              corrupti officiis unde alias eius ducimus reiciendis soluta eveniet. Nobis ullam ab omnis quasi expedita.
+              We are committed to providing you with the service you need with honesty and trustworthiness in a very
+              short time, which will build a good relationship between you and us. We have a skilled and dedicated
+              support team to monitor all your issues round the clock who will understand and solve your problems
+              seriously.
             </p>
-            <a href="">
-              Read More
-            </a>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                  aria-selected="true">Mission</a>
+              </li>
+              <li class="nav-item ml-1">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                  aria-controls="profile" aria-selected="false">Vission</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <p class="text-justify">
+                  Using information technology, we want to create more employment in the country. Our main objective is
+                  to reach the young generation with services like domain registration, web hosting, WordPress
+                  customization, WordPress migration, content development, international payment gateway consultation,
+                  etc. Our dreams are not just about ourselves; our dreams are about a country because we know that
+                  without information technology, humans cannot develop their country.
+                </p>
+              </div>
+              <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <p class="text-justify">We know that new technologies, which are more efficient and long-lasting
+                  than previous technologies,
+                  are constantly entering the world of information technology. Therefore, to provide the highest quality
+                  service to our clients, we continuously monitor the latest technology through research. This ensures
+                  the highest level of service to our clients and, over time, puts us ahead of others. With our
+                  dedication to innovation, we strive to anticipate your needs and exceed your expectations, ensuring
+                  our services remain unmatched in the industry.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
