--- a/service.html
+++ b/service.html
@@ -95,7 +95,7 @@
               <li class="nav-item">
                 <div class="quote_btn-container d-flex">
                   <a href="" class="text-white nav-link border">
-                    Control
+                    Login
                     <span>
                       <i class="fa fa-sign-in" aria-hidden="true"></i>
                     </span>
@@ -130,19 +130,19 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s1.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Currency Wallet
+                  Shared Hosting
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
+                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
+                  speed, security, and customer satisfaction.
                 </p>
                 <a href="">
                   Read More
@@ -150,19 +150,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s2.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Security Storage
+                  Domain Registration
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu excels in domain registration, presenting a continuing and hassle-free experience to secure
+                  your online identity. Trust HostFlu for unmatched reliability, affordability, and a wide range of
+                  domain extensions to choose from.
                 </p>
                 <a href="">
                   Read More
@@ -170,19 +170,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s3.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Expert Support
+                  VPS
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu leads the industry in VPS web hosting, offering top-tier reliability, blazing-speedy speeds,
+                  and remarkable customer service. Elevate your online presence with HostFlu's effective VPS
+                  tailor-made for your specific requirements.
                 </p>
                 <a href="">
                   Read More
