--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
                       Currency
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta
-                      aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis
-                      delectus repellat modi impedit sequi.
+                      Unlock the power of digital journey with Hostflu.net
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
