--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/city.png" alt="city" height="70" class="w-50 d-block m-auto">
+              <img src="./images/city.png" alt="city" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -210,7 +210,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/dutch.png" alt="dbbl" height="70" class="w-50 d-block m-auto">
+              <img src="./images/dutch.png" alt="dbbl" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -221,7 +221,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/brac.png" alt="brac" height="70" class="w-50 d-block m-auto">
+              <img src="./images/brac.png" alt="brac" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -232,7 +232,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -243,7 +243,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -254,7 +254,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -265,7 +265,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
@@ -276,7 +276,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg">
             <div class="">
-              <img src="/images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
                 <h4 class="font-weight-bold">The City Bank</h4>
                 <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
